<resources>
    <string name="app_name">All In\nThe Loop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_id">536387333213281</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_enter_name">Please enter name</string>
    <string name="toast_email">Please enter email address</string>
    <string name="toast_valid_email">Please enter valid email address</string>
    <string name="toast_country">Please enter country</string>
    <string name="toast_technique">Please enter technique</string>
    <string name="toast_height">Please enter height</string>
    <string name="toast_width">Please enter width</string>
    <string name="dialog_location_service">Location Services</string>
    <string name="dialog_location_service_message">This app requires Location Services. Please tap setting to allow access your Location.</string>
    <string name="dialog_setting">SETTING</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="toast_no_internet">No Internet connection available</string>
    <string name="toast_something_wrong">Something went wrong.Please try again soon.</string>
    <string name="toast_time_out">Please try again ,There is network error</string>
    <string name="toast_try_after_sometimes">Something went wrong.Please try again soon.</string>
    <string name="exit">Exit</string>
    <string name="yes_string">Yes</string>
    <string name="exitfromEventMessage">Exit From Event</string>
    <string name="exitfromAppTitle">Exit From App</string>
    <string name="delete_title">Delete Message</string>
    <string name="exit_message">Are you sure you want to leave this app?</string>
    <string name="delete_message">Are you sure you want to Delete this Message?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="afterlogout">You have successfully logged out.</string>
    <string name="change_password_hint">******</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password:</string>
    <string name="welcome">All in The Loop</string>
    <string name="euro">&#8364;</string>
    <string name="pound_sign">&#8356;</string>
    <string name="dollor">&#36;</string>
    <string name="underDevelopment">Under Development</string>
    <string name="left_arrow">&#8592; Back</string>
    <string name="right_arrow"> Next &#8594;</string>
    <string name="right_arrow1"> Finish &#8594;</string>
    <string name="permission_denied"> Permission Denied</string>
    <string name="go_to_settings"> Go to Setting</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="two_digit_month">Two Digit Month Required</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="stripe_secret_key">sk_test_MQdSDqW91LmspHHYRzZ5FNyk</string>
    <string name="stripe_public_key">pk_test_swCQso5rudazT5aTyl1DZxkq</string>
    <string name="linkedin_consumer_key">81u0jcewpwetrz</string>
    <string name="linkedin_consumer_secret">dLkrYcQFXzxGgiqk</string>
    <string name="rqtMettingdate">Select Date</string>
    <string name="rqtMettingTime">Select Time</string>
    <string name="logoutText">Logout</string>
    <string name="cancelText">Cancel</string>
    <string name="searchText">SEARCH</string>
    <string name="noAppFound">No App Found</string>
    <string name="forgotTopText">Enter your email address below to reset your password.</string>
    <string name="emailText">Email</string>
    <string name="backTologinText">Go Back to login Screen</string>
    <string name="submit">Submit</string>
    <string name="txt_resetPassword">Reset Your Password</string>
    <string name="yourEmailText">Email</string>
    <string name="passwordText">Password (minimum 6 characters)</string>
    <string name="txtLoginPassword">Password</string>
    <string name="loginText">LogIn</string>
    <string name="signUpText">Create Your Account</string>
    <string name="register_loginbackText">Already Registered? Sign In</string>
    <string name="registerforTheApp">Register for the App</string>
    <string name="txtforgotPasswpord">Forgot Password?</string>
    <string name="orLoginText">---------------or--------------</string>
    <string name="orRegisterText">-------NOT REGISTERED?--------</string>
    <string name="registertopText">Create your account to gain access to ALL IN THE LOOP</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="passwordAgainText">Password Again (minimum 6 characters)</string>
    <string name="companyNameOptional">Company Name</string>
    <string name="titleOptional">Title</string>
    <string name="selectCountry">Select Country</string>
    <string name="termsText">I agree to the Terms &amp; Conditions</string>
    <string name="nextbtnText">Next</string>
    <string name="findAnApp">Find an App...</string>
    <string name="orText">Or</string>
    <string name="txtEnterSecure">ENTER SECURE KEY</string>
    <string name="txtViewProfile">View Profile</string>
    <string name="txtName">Name</string>
    <string name="txtmeeting">Meeting</string>
    <string name="txtTime">Time</string>
    <string name="txtBook">Book</string>
    <string name="txtplacesLeft">Places Left</string>
    <string name="txtSender">Sender</string>
    <string name="txtMessage">Message</string>
    <string name="btnComment">Comment</string>
    <string name="edtComment">Comment...</string>
    <string name="viewComment">View Comment</string>
    <string name="txtProductName">Product Name</string>
    <string name="txtBidAmount">Bid Amount</string>
    <string name="txtdateTime">DateTime</string>
    <string name="txtStatus">Status</string>
    <string name="txtPayNow">PayNow</string>
    <string name="txtUnitPrice">Unit Price</string>
    <string name="txtQty">Quantity</string>
    <string name="txtSubTotal">Sub Total</string>
    <string name="btnCheckIn">Check In</string>
    <string name="btnMoreInfo">More Info</string>
    <string name="txtSelectAnswer">Please select one answer.</string>
    <string name="btnAccept">Accept</string>
    <string name="btnReject">Reject</string>
    <string name="btn_sugestNewTime">Suggest New Time</string>
    <string name="txtMode">Mode</string>
    <string name="txtOrderStatus">Order Status</string>
    <string name="txtCreateDate">Created Date</string>
    <string name="txtLike">Like</string>
    <string name="txtNumberPeople">People Like this</string>
    <string name="txtDonateAmount">Donate Amount</string>
    <string name="txtSilde">Slide</string>
    <string name="txtItemName">Item Name</string>
    <string name="txtStartPrice">Start Price</string>
    <string name="txtResPrice">Reserve Price</string>
    <string name="txtApproved">Approved</string>
    <string name="txtSpeaker">Speaker</string>
    <string name="txtlocation">Location</string>
    <string name="txtLogin">Login</string>
    <string name="btnsaveToDevice">Save to Device</string>
    <string name="txtAppName">AllInTheloop.com</string>
    <string name="txtcardLayoutSoft">All In The Loop Software</string>
    <string name="txtCardNumber">Card Number</string>
    <string name="txtexpirationDate">Expiration Month</string>
    <string name="txtExyear">Expiration Year</string>
    <string name="edtCVVNumber">CVV Number</string>
    <string name="txtPaymentInfo">Payment Info</string>
    <string name="txtAddress">Address</string>
    <string name="txtZip">Post Code</string>
    <string name="txtCity">City</string>
    <string name="txtLoginFirst">Please Login First</string>
    <string name="txtAuctionType">Auction Type</string>
    <string name="txtCategory">Category</string>
    <string name="txtItemTitle">Item Title</string>
    <string name="txtItemDesc">Item Description</string>
    <string name="txtFeatures">Features</string>
    <string name="txtPrice">Price</string>
    <string name="chkReservePriceHidden">Reserve Price Hidden</string>
    <string name="chkReservePricePublicOptions">Reserve Price Public Options</string>
    <string name="txtAuctionStartDate">Auction Start Date</string>
    <string name="txtAuctionStartTime">Auction Start Time</string>
    <string name="txtAuctionEndDate">Auction End Date</string>
    <string name="txtAuctionEndTime">Auction End Time</string>
    <string name="txtListingStatus">Listing Status</string>
    <string name="txtAddImages">Add Images</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="txtAddNotes">Add Notes</string>
    <string name="edtHeading">Heading</string>
    <string name="edtDescription">Description</string>
    <string name="btnAdd">Add</string>
    <string name="btnGoBacktotheAgenda">Go Back to the Agenda</string>
    <string name="txtNoBooksession">No Book session</string>
    <string name="btnSeeMeetingReuqest">See My Meetings</string>
    <string name="txtNoDataFound">No Data Found</string>
    <string name="btnShareContactInformation">Share Contact</string>
    <string name="btnRequestSent">Request Sent</string>
    <string name="txtRequestPendingforApproval">Request Pending for Approval</string>
    <string name="btnSendMessage">Send Message</string>
    <string name="btnAddPhoto">Add Photo</string>
    <string name="edtTypeYourMessagehere">Type Your Message here</string>
    <string name="edtLeaveYourComment">Leave Your Comment here...</string>
    <string name="btnLoadMore">Load More</string>
    <string name="txtAccountInformtion">Account Informtion</string>
    <string name="txtPush">Push</string>
    <string name="txtPrevious">Previous</string>
    <string name="txtQuestions">Questions</string>
    <string name="txtViewHelp">View Help</string>
    <string name="txtPresntationTitle">PRESENTER TOOLS</string>
    <string name="txtPresanDesc">As a Presenter you are able to control what slides your attendees can see on their screens in real-time (live). You can also push out polls, results and view any questions asked all from this presenter platform.</string>
    <string name="txtlockUlockText">Unlocked/Locked</string>
    <string name="txthelplocktext">When the top button reads “Unlocked” your attendees can scroll through to other presentation slides. Tap this button to change this button to “Locked”. When the presentation is Locked your attendees cannot scroll from slide to slide outside the slide that appears on your screen.</string>
    <string name="txtPushText">When you tap the Push button every attendee will have the slide that appears on your screen appear on theirs automatically.</string>
    <string name="txtQuestionText">Tap this button to view any questions that have been asked by your attendees using the app. If you have a moderator, these questions may have been moderated.</string>
    <string name="txtnexttext">Tap Next to show the next slide on all attendees devices.</string>
    <string name="txtpreviousText">Tap Previous to show the previous slide on all attendees devices.</string>
    <string name="txtpoll">Poll</string>
    <string name="txtpollText">After you push out a poll you can view results by tapping the View Results button. Results will appear in a pie chart. Tap the Push button if you want to show these results on all of your attendees devices.</string>
    <string name="txt_setReminder">Set Reminder Alert</string>
    <string name="txt_5min">5 Minutes</string>
    <string name="txt_10min">15 Minutes</string>
    <string name="txt_15min">30 Minutes</string>
    <string name="txt_noAlert">No Alert</string>
</resources>