<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:padding="15dp"
                    android:text="@string/txtViewHelp"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <ImageView
                    android:id="@+id/dailog_help_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right|top"
                    android:clickable="true"
                    android:padding="9dp"
                    android:src="@drawable/ic_close_button" />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/GrayColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/txtPresntationTitle"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPresanDesc"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/txtlockUlockText"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txthelplocktext"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/txtPush"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPushText"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/txtQuestions"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtQuestionText"
                    android:layout_gravity="center"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/nextbtnText"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtnexttext"
                    android:layout_gravity="center"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/txtPrevious"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtpreviousText"
                    android:layout_gravity="center"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/txtpoll"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtpollText"
                    android:layout_gravity="center"
                    android:padding="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</ScrollView>